force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>Manages the application process for the EERE Small Business Program, tracking submissions, evaluations, and outcomes for each applicant to ensure a systematic and transparent review process.</description>
    <label>Application</label>
    <nameField>
        <displayFormat>APP-{000000000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>