force-app/main/default/objects/Application__c/fields/Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact__c</fullName>
    <description>The business point of contact for the application.</description>
    <inlineHelpText>Enter the email of the business point of contact for the application.</inlineHelpText>
    <label>Business Contact</label>
    <type>Email</type>
</CustomField>