force-app/main/default/objects/Application__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the application to the company&apos;s Account record.</description>
    <inlineHelpText>Select the company related to this application.</inlineHelpText>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>