force-app/main/default/objects/Application__c/fields/Concept_Paper_Status__c.field-meta.xml
<CustomField>
    <fullName>Concept_Paper_Status__c</fullName>
    <description>Tracks the status of the Concept Paper evaluation.</description>
    <label>Concept Paper Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Encouraged</fullName>
            </value>
            <value>
                <fullName>Discouraged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>