force-app/main/default/objects/Application__c/fields/Confidentiality_Statements__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Statements__c</fullName>
    <description>Any confidentiality statements necessary for the application process</description>
    <inlineHelpText>Detail any necessary confidentiality statements</inlineHelpText>
    <label>Confidentiality Statements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>