force-app/main/default/objects/Application__c/fields/Final_Decision__c.field-meta.xml
<CustomField>
    <fullName>Final_Decision__c</fullName>
    <description>The final decision on the application</description>
    <label>Final Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>