force-app/main/default/objects/Application__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Tracks the status of the application.</description>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concept Paper</fullName>
                <default>true</default>
                <label>Concept Paper</label>
            </value>
            <value>
                <fullName>Full Application</fullName>
            </value>
            <value>
                <fullName>Selection</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Project Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>