force-app/main/default/objects/Application__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>Tracks the date the application was submitted.</description>
    <inlineHelpText>Select today&apos;s date or the date the application was submitted if not today.</inlineHelpText>
    <label>Submission Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>