force-app/main/default/objects/Application__c/fields/Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact__c</fullName>
    <description>The technical contact of the application.</description>
    <inlineHelpText>Enter the email address of the technical point of contact for the application.</inlineHelpText>
    <label>Technical Contact</label>
    <type>Email</type>
</CustomField>