force-app/main/default/objects/Application__c/fields/Technical_Description__c.field-meta.xml
<CustomField>
    <fullName>Technical_Description__c</fullName>
    <description>A technical description that outlines the proposed technology</description>
    <inlineHelpText>Outline the proposed technology</inlineHelpText>
    <label>Technical Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>